# webfingerd

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.toml
deploy/: .env.sample  compose.yml
docs/superpowers/plans/: 2026-04-03-webfingerd-implementation.md
docs/superpowers/specs/: 2026-04-03-webfingerd-design.md
migration/: Cargo.toml
migration/src/: lib.rs  m20260403_000001_create_domains.rs  m20260403_000002_create_resources.rs  m20260403_000003_create_service_tokens.rs  m20260403_000004_create_links.rs
src/: auth.rs  cache.rs  challenge.rs  config.rs  error.rs  lib.rs  main.rs  reaper.rs  state.rs
src/entity/: domains.rs  links.rs  mod.rs  resources.rs  service_tokens.rs
src/handler/: domains.rs  health.rs  host_meta.rs  links.rs  metrics.rs  mod.rs  tokens.rs  webfinger.rs
src/middleware/: rate_limit.rs  request_id.rs
src/ui/: handlers.rs  mod.rs  templates.rs
templates/: dashboard.html  domain_detail.html  layout.html  link_browser.html  login.html  token_management.html
tests/: test_domains.rs  test_full_flow.rs  test_host_meta.rs  test_links.rs  test_rate_limit.rs  test_reaper.rs  test_tokens.rs  test_webfinger.rs
tests/common/: mod.rs
